examples/test/testpolicy3497.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3497
  namespace: namespace350
spec:
  podSelector:
    matchLabels:
      key43: value47
      key35: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value12
          key11: value47
          key38: value25
      podSelector:
        matchLabels:
          key19: value0
          key8: value5
